# ScreenGenie

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml
configs/: config.yml
src/capture/: capture_screen.py
src/llm/: model.py
src/ocr/: ocr_engine.py
src/pipelines/: main_flow.py
src/screengenie/: test_llm.py
src/screengenie/capture/: capture_screen.py
src/screengenie/core/: pipeline.py
src/screengenie/helpers/: config.py
src/screengenie/llm/: model.py
src/screengenie/ocr/: ocr_engine.py
src/screengenie/recommendation/: suggestion_engine.py
src/screengenie/watchers/: screenshot_trigger.py
src/ui/: main_window.py
